# translated_DeathStarBench

./: .env  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
benchmark/: original.sh  translated.sh
cmd/: db.ts
proto/: profile.ts
proto/profile/: Address.ts  Hotel.ts  Image.ts  Profile.ts  Request.ts  Result.ts
rust/translated_profile/: Cargo.toml  build.rs
rust/translated_profile/src/: cache.rs  mongo.rs  server.rs
src/: app.ts  index.ts
src/config/: proto.ts
src/constants/: types.ts
src/handlers/: profile.ts
src/services/: cache.ts  profile.ts
src/types/: index.d.ts
test/: GetProfiles.test.ts
test/util/: index.ts
