[package]
name = "translated_profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "translated_profile_server"
path = "src/server.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }


serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.7"

[build-dependencies]
tonic-build = "0.9"
