[package]
name = "translated_profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "translated_profile_server"
path = "src/server.rs"

[dependencies]
mongodb = "2.6.0"
tonic = "0.9"
prost = "0.11"
lazy_static = "1.4.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

memcache = "*"
moka = { version = "0.11", features = ["future"] }

serde = "1"
serde_json = "1"
serde_derive = "1"
rand = "0.7"

[build-dependencies]
tonic-build = "0.9"
